--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -523,7 +523,10 @@
   "ten_phong" : "Tên phòng",
   "suc_chua" : "Sức chứa",
   "thiet_bi_san_co" : "Thiết bị sẵn có",
-  "loai_thiet_bi":"Loại thiết bị"
+  "loai_thiet_bi":"Loại thiết bị",
+  "hoa_toc" : "Hỏa tốc",
+  "khan" : "Khẩn",
+  "truc_tuyen" : "Trực tuyến"
 }
 
 
