--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -519,18 +519,26 @@
   "dot_xuat": "Đột xuất",
   "sua_that_bai": "Sửa thất bại",
   "cong_tac_chuan_bi": "Công tác chuẩn bị",
-  "thong_tin_phong" : "Thông tin phòng",
-  "cho_duyet" : "Chờ duyệt",
-  "da_duyet" : "Đã duyệt",
-  "ten_phong" : "Tên phòng",
-  "suc_chua" : "Sức chứa",
-  "thiet_bi_san_co" : "Thiết bị sẵn có",
-  "loai_thiet_bi":"Loại thiết bị",
-  "hoa_toc" : "Hỏa tốc",
-  "khan" : "Khẩn",
-  "truc_tuyen" : "Trực tuyến"
-
-
+  "thong_tin_phong": "Thông tin phòng",
+  "cho_duyet": "Chờ duyệt",
+  "da_duyet": "Đã duyệt",
+  "ten_phong": "Tên phòng",
+  "suc_chua": "Sức chứa",
+  "thiet_bi_san_co": "Thiết bị sẵn có",
+  "loai_thiet_bi": "Loại thiết bị",
+  "hoa_toc": "Hỏa tốc",
+  "khan": "Khẩn",
+  "truc_tuyen": "Trực tuyến",
+  "phat_bieu": "Phát Bieu",
+  "bieu_quyet": "Biểu Quyết",
+  "ket_luan_hop": "Kết luận ",
+  "y_kien_cuop_hop": "Ý kiến cuộc họp",
+  "thong_tin_yeu_cau_thiet_bi" : "Thông tin yêu cầu thiết bị",
+  "moi_nguoi_tham_gia" : "Mời người tham gia",
+  "diem_danh" : "Điểm danh",
+  "huy_diem_danh" : "Huỷ điểm danh",
+  "tim_kiem_can_bo" : "Tìm kiếm cán bộ",
+  "chon_tat_ca" : "Chọn tất cả"
 }
 
 
