--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -539,7 +539,10 @@
   "diem_danh" : "Điểm danh",
   "huy_diem_danh" : "Huỷ điểm danh",
   "tim_kiem_can_bo" : "Tìm kiếm cán bộ",
-  "chon_tat_ca" : "Chọn tất cả"
+  "chon_tat_ca" : "Chọn tất cả",
+  "them_tai_lieu_cuoc_hop" : "Thêm tài liệu cuộc họp",
+  "chuong_trinh_hop" : "Chương trình họp"
+
 
 
 }
