--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -94,7 +94,7 @@
   "hanh_chinh_cong": "Hành chính công",
   "y_kien_nguoi_dan": "Ý kiến người dân",
   "quan_ly_nhiem_vu": "Quản lý nhiệm vụ",
-  "bao_chi_mang_xa_hoi": "Báo chí mạng xã hội",
+  "bao_chi_mang_xa_hoi": "Báo chí Mạng xã hội",
   "ket_noi": "Kết nối",
   "tien_ich": "Tiện ích",
   "chuyen_pham_vi": "Chuyển phạm vi",
