--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -541,8 +541,20 @@
   "tim_kiem_can_bo" : "Tìm kiếm cán bộ",
   "chon_tat_ca" : "Chọn tất cả",
   "them_tai_lieu_cuoc_hop" : "Thêm tài liệu cuộc họp",
-  "chuong_trinh_hop" : "Chương trình họp"
-
-
-
+  "chuong_trinh_hop" : "Chương trình họp",
+  "dang_ky_phat_bieu" : "Đăng ký phát biểu",
+  "danh_sach_phat_bieu" : "Danh sách phát biểu",
+  "huy_duyet" : "Huỷ duyệt",
+  "phien_hop" : "Phiên ",
+  "noi_dung_phat_bieu" : "Nội dung phát biểu",
+  "phut" : "",
+  "ten_bieu_quyet" : "Tên biểu quyết",
+  "duyet" : "Duyệt",
+  "them_bieu_quyet" : "Thêm biểu quyết",
+  "tao_bieu_quyet" : "Tạo biểu quyết",
+  "loai_bieu_quyet" : "Loại biểu quyết",
+  "bo_khieu_kin" : "Bỏ phiếu ",
+  "bo_phieu_cong_khai" : "Bỏ phiếu công khai",
+  "ngay_bieu_quyet" : "Ngày biểu quyết",
+  "cac_lua_chon_bieu_quyet" : "Các lựa chọn biểu quyết"
 }
