--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -533,14 +533,31 @@
   "bieu_quyet": "Biểu Quyết",
   "ket_luan_hop": "Kết luận ",
   "y_kien_cuop_hop": "Ý kiến cuộc họp",
-  "thong_tin_yeu_cau_thiet_bi" : "Thông tin yêu cầu thiết bị",
-  "moi_nguoi_tham_gia" : "Mời người tham gia",
-  "diem_danh" : "Điểm danh",
-  "huy_diem_danh" : "Huỷ điểm danh",
-  "tim_kiem_can_bo" : "Tìm kiếm cán bộ",
-  "chon_tat_ca" : "Chọn tất cả",
-  "them_tai_lieu_cuoc_hop" : "Thêm tài liệu cuộc họp",
-  "chuong_trinh_hop" : "Chương trình họp"
+  "thong_tin_yeu_cau_thiet_bi": "Thông tin yêu cầu thiết bị",
+  "moi_nguoi_tham_gia": "Mời người tham gia",
+  "diem_danh": "Điểm danh",
+  "huy_diem_danh": "Huỷ điểm danh",
+  "tim_kiem_can_bo": "Tìm kiếm cán bộ",
+  "chon_tat_ca": "Chọn tất cả",
+  "them_tai_lieu_cuoc_hop": "Thêm tài liệu cuộc họp",
+  "chuong_trinh_hop": "Chương trình họp",
+  "dang_ky_phat_bieu": "Đăng ký phát biểu",
+  "danh_sach_phat_bieu" : "Danh sách phát biểu",
+  "huy_duyet" : "Danh sách phát biểu",
+  "huy_duyet" : "Huỷ duyệt",
+  "phien_hop" : "Phiên ",
+  "noi_dung_phat_bieu" : "Nội dung phát biểu",
+  "phut" : "",
+  "ten_bieu_quyet" : "Tên biểu quyết",
+  "duyet" : "Duyệt",
+  "them_bieu_quyet" : "Thêm biểu quyết",
+  "tao_bieu_quyet" : "Tạo biểu quyết",
+  "loai_bieu_quyet" : "Loại biểu quyết",
+  "bo_khieu_kin" : "Bỏ phiếu ",
+  "bo_phieu_cong_khai" : "Bỏ phiếu công khai",
+  "ngay_bieu_quyet" : "Ngày biểu quyết",
+  "cac_lua_chon_bieu_quyet" : "Các lựa chọn biểu quyết"
+
 }
 
 
