--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -228,7 +228,7 @@
   "lich_cong_tac_nuoc_ngoai": "Lịch công tác nước ngoài",
   "lich_tiep_dan": "Lịch tiếp dân",
   "admin_tao": "Admin tạo",
-  "loai_lich": "Loai lich",
+  "loai_lich": "Loai lịch",
   "nhac_lai": "Nhắc lại",
   "mau_mac_dinh": "Màu mặc định",
   "linh_vuc": "Lĩnh vực",
