fix Bug Ui phat bieu phone, ghep data so luong phat bieu

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -530,7 +530,7 @@
   "truc_tuyen": "Trực tuyến",
   "binh_thuong": "Bình thường",
   "sua_that_bai": "Sửa thất bại",
-  "phat_bieu": "Phát Bieu",
+  "phat_bieu": "Phát Biểu",
   "bieu_quyet": "Biểu Quyết",
   "ket_luan_hop": "Kết luận ",
   "y_kien_cuop_hop": "Ý kiến cuộc họp",
@@ -545,7 +545,7 @@
   "dang_ky_phat_bieu" : "Đăng ký phát biểu",
   "danh_sach_phat_bieu" : "Danh sách phát biểu",
   "huy_duyet" : "Huỷ duyệt",
-  "phien_hop" : "Phiên ",
+  "phien_hop" : "Phiên Họp",
   "noi_dung_phat_bieu" : "Nội dung phát biểu",
   "phut" : "",
   "ten_bieu_quyet" : "Tên biểu quyết",
