--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -529,7 +529,7 @@
   "hoa_toc": "Hỏa tốc",
   "khan": "Khẩn",
   "truc_tuyen": "Trực tuyến",
-  "phat_bieu": "Phát Bieu",
+  "phat_bieu": "Phát Biểu",
   "bieu_quyet": "Biểu Quyết",
   "ket_luan_hop": "Kết luận ",
   "y_kien_cuop_hop": "Ý kiến cuộc họp",
@@ -545,9 +545,9 @@
   "danh_sach_phat_bieu" : "Danh sách phát biểu",
   "huy_duyet" : "Danh sách phát biểu",
   "huy_duyet" : "Huỷ duyệt",
-  "phien_hop" : "Phiên ",
+  "phien_hop" : "Phiên Họp",
   "noi_dung_phat_bieu" : "Nội dung phát biểu",
-  "phut" : "",
+  "phut" : "Phút",
   "ten_bieu_quyet" : "Tên biểu quyết",
   "duyet" : "Duyệt",
   "them_bieu_quyet" : "Thêm biểu quyết",
