--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -528,7 +528,9 @@
   "loai_thiet_bi":"Loại thiết bị",
   "hoa_toc" : "Hỏa tốc",
   "khan" : "Khẩn",
-  "truc_tuyen" : "Trực tuyến"
+  "truc_tuyen" : "Trực tuyến",
+  "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
+  "quay_lai" : "Quay lại"
 
 
 }
