sua lai UI ket luan hop, sua lai data ket luan hop

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -565,5 +565,13 @@
   "tinh_trang" : "Tình trạng",
   "noi_dung_theo_doi" : "Nội dung theo dõi",
   "tinh_hinh_thuc_hien_noi_bo" : "Tình hình thực hiện nội bộ",
-  "loai_nv" : "Loại nhiệm vụ"
+  "loai_nv" : "Loại nhiệm vụ",
+  "ngay_van_ban": "Ngày văn bản",
+  "nhiem_vu_ubnd": "Nhiệm vụ uỷ ban nhân dân",
+  "nhiem_vu_cpvpcp": "Nhiệm vụ chính phủ văn phòng chính phủ",
+  "nhiem_vu_dv": "Nhiệm vụ nv",
+  "don_vi_theo_doi": "Đơn vị theo dõi",
+  "nguoi_theo_doi": "Người theo dõi",
+  "nguoi_giao_nhiem_vu" : "Người giao nhiệm vụ",
+  "can_bo_boc_bang" : "Chọn cán bộ sử dụng bắc băng"
 }
