thong tin gui nhan van ban den phone & mobile

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -569,7 +569,8 @@
   "khan" : "Khẩn",
   "truc_tuyen" : "Trực tuyến",
   "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
-  "quay_lai" : "Quay lại"
+  "quay_lai" : "Quay lại",
+  "nhan_de_biet" : "Nhận để biết"
 
 
 }
