--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -560,5 +560,6 @@
   "nguoi_phat_bieu" : "Nguười phát biểu",
   "sua_that_bai": "Sửa thất bại",
   "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
-  "quay_lai" : "Quay lại"
+  "quay_lai" : "Quay lại",
+  "nhan_de_biet" : "Nhận để biết"
 }
