Sửa lại UI thêm ý kiến lịch họp, ghép data danh sách phát biểu

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -576,5 +576,7 @@
   "can_bo_boc_bang" : "Chọn cán bộ sử dụng bắc băng",
   "sua_that_bai": "Sửa thất bại",
   "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
-  "quay_lai" : "Quay lại"
+  "quay_lai" : "Quay lại",
+  "them_y_kien" : "Thêm ý kiến",
+  "cuoc_hop" : "Cuộc họp"
 }
