--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -583,7 +583,9 @@
   "khan" : "Khẩn",
   "truc_tuyen" : "Trực tuyến",
   "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
-  "quay_lai" : "Quay lại"
+  "quay_lai" : "Quay lại",
+  "them_y_kien" : "Thêm ý kiến",
+  "cuoc_hop" : "Cuộc họp"
 }
 
 
