--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -576,6 +576,8 @@
   "can_bo_boc_bang" : "Chọn cán bộ sử dụng bắc băng",
   "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
   "quay_lai" : "Quay lại",
-  "nhan_de_biet" : "Nhận để biết"
+  "nhan_de_biet" : "Nhận để biết",
+  "sun_day" : "Sunday"
+
 
 }
