lich su cap nhat tinh hinh xu ly

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -575,7 +575,8 @@
   "them_y_kien": "Thêm ý kiến",
   "cuoc_hop": "Cuộc họp",
   "nhan_de_biet": "Nhận để biết",
-  "sun_day": "Sunday"
+  "sun_day": "Sunday",
+  "dv_cap_nhat": "ĐV cập nhật"
 }
 
 
