--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -579,5 +579,6 @@
   "them_y_kien": "Thêm ý kiến",
   "cuoc_hop": "Cuộc họp",
   "nhan_de_biet": "Nhận để biết",
-  "sun_day": "Sunday"
+  "sun_day": "Sunday",
+  "dv_cap_nhat": "ĐV cập nhật"
 }
