--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -287,7 +287,7 @@
   "don_vi_phoi_hop": "Đơn vị phối hợp",
   "tao_lich_hop": "Tạo lịch họp",
   "thong_tin_lich": "Thông tin lịch",
-  "hop_truc_tiep": "Họp trực tiếp",
+  "hop_truc_tuyen": "Họp trực tuyến",
   "trong_don_vi": "Trong đơn vị",
   "loai_hop": "Loại họp",
   "muc_do_hop": "Mức độ họp",
