--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -334,7 +334,7 @@
   "dau_moi_lam_viec": "Đầu mối làm việc",
   "noi_dung_lam_viec": "Nội dung làm việc",
   "thong_tin_khach_moi": "Thông tin khách mời",
-  "tong_so_luong_khach": "Tông số lượng khách",
+  "tong_so_luong_khach": "Tổnng số lượng khách",
   "nhap_so_luong": "Nhập số lượng",
   "chuong_trinh_hop": "Chương trình họp",
   "them_phien_hop": "Thêm phiên họp",
