--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -335,7 +335,7 @@
   "chon": "Chọn",
   "dong": "Đóng",
   "thong_tin_khach_moi": "Thông tin khách mời",
-  "tong_so_luong_khach": "Tông số lượng khách",
+  "tong_so_luong_khach": "Tổng số lượng khách",
   "nhap_so_luong": "Nhập số lượng",
   "chuong_trinh_hop": "Chương trình họp",
   "them_phien_hop": "Thêm phiên họp",
