cai dat giao dien screen

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -591,7 +591,8 @@
   "ban_co_chac_chan_muon_thu_hoi_nay" : "Bạn có chắc muốn thu hồi kết luận họp này?",
   "thu_hoi_ket_luan_hop" : "Thu hồi kết luận họp",
   "xoa_ket_luan_hop" : "Xóa kết luận họp",
-  "dv_cap_nhat": "ĐV cập nhật"
+  "cai_dat_mau" : "Cài đặt màu"
+
 }
 
 
