--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -574,24 +574,26 @@
   "nd_thu_hoi": "ND thu hồi",
   "dv_thu_hoi": "ĐV thu hồi",
   "dv_bi_thu_hoi": "ĐV bị thu hồi",
-  "nguoi_giao_nhiem_vu" : "Người giao nhiệm vụ",
-  "can_bo_boc_bang" : "Chọn cán bộ sử dụng bắc băng",
-  "ban_da_tao_lich_lam_viec_thanh_cong" : "Bạn đã tạo lịch làm việc thành công",
-  "quay_lai" : "Quay lại",
-  "them_y_kien" : "Thêm ý kiến",
-  "cuoc_hop" : "Cuộc họp",
-  "nhan_de_biet" : "Nhận để biết",
-  "sun_day" : "Sunday",
-  "nhac_lich" : "Nhắc lịch",
+  "nguoi_giao_nhiem_vu": "Người giao nhiệm vụ",
+  "can_bo_boc_bang": "Chọn cán bộ sử dụng bắc băng",
+  "ban_da_tao_lich_lam_viec_thanh_cong": "Bạn đã tạo lịch làm việc thành công",
+  "quay_lai": "Quay lại",
+  "them_y_kien": "Thêm ý kiến",
+  "cuoc_hop": "Cuộc họp",
+  "nhan_de_biet": "Nhận để biết",
+  "sun_day": "Sunday",
+  "nhac_lich": "Nhắc lịch",
   "dv_cap_nhat": "ĐV cập nhật",
-  "ban_chan_chan_sua_lich_nay_khong" : "Bạn có chắc chắn muốn sửa lịch này không",
-  "ket_luan_cuoc_hop" : "Kết luận cuộc họp",
-  "ban_co_chac_chan_muon_gui_mai_nay" : "Bạn có muốn gửi mail kết luận họp này?",
-  "ban_co_chac_chan_muon_xoa_klh_nay" : "Bạn có chắc muốn xóa kết luận họp này?",
-  "ban_co_chac_chan_muon_thu_hoi_nay" : "Bạn có chắc muốn thu hồi kết luận họp này?",
-  "thu_hoi_ket_luan_hop" : "Thu hồi kết luận họp",
-  "xoa_ket_luan_hop" : "Xóa kết luận họp",
-  "sua_lich_hop": "Sửa lịch họp"
+  "ban_chan_chan_sua_lich_nay_khong": "Bạn có chắc chắn muốn sửa lịch này không",
+  "ket_luan_cuoc_hop": "Kết luận cuộc họp",
+  "ban_co_chac_chan_muon_gui_mai_nay": "Bạn có muốn gửi mail kết luận họp này?",
+  "ban_co_chac_chan_muon_xoa_klh_nay": "Bạn có chắc muốn xóa kết luận họp này?",
+  "ban_co_chac_chan_muon_thu_hoi_nay": "Bạn có chắc muốn thu hồi kết luận họp này?",
+  "thu_hoi_ket_luan_hop": "Thu hồi kết luận họp",
+  "xoa_ket_luan_hop": "Xóa kết luận họp",
+  "sua_lich_hop": "Sửa lịch họp",
+  "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
+  "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?"
 }
 
 
