--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -595,5 +595,7 @@
   "ban_co_chac_chan_muon_thu_hoi_nay": "Bạn có chắc muốn thu hồi kết luận họp này?",
   "thu_hoi_ket_luan_hop": "Thu hồi kết luận họp",
   "xoa_ket_luan_hop": "Xóa kết luận họp",
-  "sua_lich_hop": "Sửa lịch họp"
+  "sua_lich_hop": "Sửa lịch họp",
+  "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
+  "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?"
 }
