--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -592,7 +592,15 @@
   "ban_co_chac_chan_muon_thu_hoi_nay" : "Bạn có chắc muốn thu hồi kết luận họp này?",
   "thu_hoi_ket_luan_hop" : "Thu hồi kết luận họp",
   "xoa_ket_luan_hop" : "Xóa kết luận họp",
-  "dv_cap_nhat": "ĐV cập nhật"
+  "dv_cap_nhat": "ĐV cập nhật",
+  "chuyen_giong_noi_thanh_van_ban": "Chuyển giọng nói thành văn bản",
+  "chuyen_van_ban_thanh_giong_noi": "Chuyển văn bản thành giọng nói",
+  "phien_dich_tu_dong": "Phiên dịch tự động",
+  "lich_am_duong": "Lịch âm dương",
+  "tra_cuu_van_ban_phap_luat": "Tra cứu văn bản pháp luật",
+  "danh_ba_dien_tu": "Danh bạ điện tử",
+  "huong_dan_su_dung": "Hướng dẫn sử dụng",
+  "mang_xa_hoi_noi_bo": "Mạng xã hội nội bộ"
 }
 
 
