--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -590,13 +590,13 @@
   "sun_day": "Sunday",
   "nhac_lich": "Nhắc lịch",
   "dv_cap_nhat": "ĐV cập nhật",
-  "ban_chan_chan_sua_lich_nay_khong" : "Bạn có chắc chắn muốn sửa lịch này không",
-  "ket_luan_cuoc_hop" : "Kết luận cuộc họp",
-  "ban_co_chac_chan_muon_gui_mai_nay" : "Bạn có muốn gửi mail kết luận họp này?",
-  "ban_co_chac_chan_muon_xoa_klh_nay" : "Bạn có chắc muốn xóa kết luận họp này?",
-  "ban_co_chac_chan_muon_thu_hoi_nay" : "Bạn có chắc muốn thu hồi kết luận họp này?",
-  "thu_hoi_ket_luan_hop" : "Thu hồi kết luận họp",
-  "xoa_ket_luan_hop" : "Xóa kết luận họp",
+  "ban_chan_chan_sua_lich_nay_khong": "Bạn có chắc chắn muốn sửa lịch này không",
+  "ket_luan_cuoc_hop": "Kết luận cuộc họp",
+  "ban_co_chac_chan_muon_gui_mai_nay": "Bạn có muốn gửi mail kết luận họp này?",
+  "ban_co_chac_chan_muon_xoa_klh_nay": "Bạn có chắc muốn xóa kết luận họp này?",
+  "ban_co_chac_chan_muon_thu_hoi_nay": "Bạn có chắc muốn thu hồi kết luận họp này?",
+  "thu_hoi_ket_luan_hop": "Thu hồi kết luận họp",
+  "xoa_ket_luan_hop": "Xóa kết luận họp",
   "chung": "Chung",
   "trong_nuoc": "Trong nước",
   "nuoc_ngoai": "Nước ngoài",
@@ -623,5 +623,6 @@
   "nhap_link": "Nhập link ...",
   "sua_lich_hop": "Sửa lịch họp",
   "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
-  "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?"
+  "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?",
+  "tin_noi_bat": "Tin nổi bật"
 }
