api tao bieu quyet, api danh sach phien hop cua them y kien, Ui + api danh sách ý kiến

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -166,7 +166,7 @@
   "chinh_sua_thong_tin": "Chỉnh sửa thông tin cá nhân",
   "thay_doi": "Thay đổi",
   "danh_sach_rong": "Danh sách rỗng",
-  "select_validate": "select_validate",
+  "select_validate": "Vui lòng chọn",
   "vuiLongChon": "Vui lòng chọn",
   "khong_duoc_de_trong": "Không được để trống",
   "Nam": "Nam",
