--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -651,5 +651,6 @@
   "sua_lich_hop": "Sửa lịch họp",
   "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
   "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?",
-  "tin_noi_bat": "Tin nổi bật"
+  "tin_noi_bat": "Tin nổi bật",
+  "xoa_chi_tiet_lich_hop" : "bạn có chắc chắn muốn xóa lịch này"
 }
