--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -647,7 +647,8 @@
   "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
   "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?",
   "tin_noi_bat": "Tin nổi bật",
-  "xoa_chi_tiet_lich_hop" : "bạn có chắc chắn muốn xóa lịch này"
+  "xoa_chi_tiet_lich_hop" : "bạn có chắc chắn muốn xóa lịch này",
+  "sua_bien_ban_ket_luan_hop" : "Sửa Biên bản kết luận họp"
 }
 
 
