--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -670,5 +670,8 @@
   "loai_bai_viet": "Loại bài viết",
   "id_viber": "ID Viber",
   "id_meeting": "ID Meeting",
-  "zoom": "Zoom"
+  "zoom": "Zoom",
+  "tao_thanh_cong": "Tạo sự kiện thành công",
+  "tao_that_bai": "Tạo sự kiện thất bại",
+  "thong_tin_su_kien": "Thông tin sự kiện"
 }
