--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -670,5 +670,6 @@
   "english" : "English",
   "tim_tep_tren_dien_thoai_cua_ban" : "Tìm tệp trên điện thoại của bạn",
   "chon_tai_lieu" : "Chọn tài liệu",
-  "chi_ho_tro_txt" : "Chỉ hỗ trợ tệp txt"
+  "chi_ho_tro_txt" : "Chỉ hỗ trợ tệp txt",
+  "coppy" : "Coppy"
 }
