--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -661,7 +661,16 @@
   "cac_to_chuc": "Các tổ chức",
   "chinh_phu": "Chính phủ",
   "cac_don_vi_hanh_chinh": "Các đơn vị hành chính",
-  "thay_doi_giong_noi" : "Click vào icon để thu âm giọng nói"
+  "thay_doi_giong_noi" : "Click vào icon để thu âm giọng nói",
+  "tin_radio": "Tin radio",
+  "kenh_raido": "Kênh radio chính thức của UBND tỉnh Đồng Nai cập nhật tin thời sự trong ngày, bản tin thời sự, chính trị trong nước mới nhất",
+  "ubnd_dongnai": "UBND Tỉnh Đồng Nai",
+  "thong_tin_gioi_thieu": "Thông tin giới thiệu",
+  "sap_xep_theo": "Sắp xếp theo",
+  "kenh_phat_thanh_chinh_thuc": "Kênh radio chính thức của UBND tỉnh Đồng Nai",
+  "xem_them": "xem thêm",
+  "thu_gon": "thu gọn"
+
 }
 
 
