--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -712,7 +712,12 @@
   "tim_tep_tren_dien_thoai_cua_ban": "Tìm tệp trên điện thoại của bạn",
   "chon_tai_lieu": "Chọn tài liệu",
   "chi_ho_tro_txt": "Chỉ hỗ trợ tệp txt",
-  "coppy": "Coppy"
+  "coppy": "Coppy",
+  "cong_viec_cua_ban": "Công việc của bạn",
+  "cong_viec_quan_trong": "Công việc quan trọng",
+  "gan_cho_toi": "Gán cho tôi",
+  "da_bi_xoa": "Đã bị xóa",
+  "nhom_cong_viec_moi": "Nhóm công việc mới"
 }
 
 
