--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -716,5 +716,10 @@
   "tao_that_bai": "Tạo sự kiện thất bại",
   "thong_tin_su_kien": "Thông tin sự kiện",
   "doc_ngay": "Đọc ngay",
+  "cong_viec_cua_ban": "Công việc của bạn",
+  "cong_viec_quan_trong": "Công việc quan trọng",
+  "gan_cho_toi": "Gán cho tôi",
+  "da_bi_xoa": "Đã bị xóa",
+  "nhom_cong_viec_moi": "Nhóm công việc mới",
   "tai_van_ban_len": "Tải văn bản lên"
 }
