finish chi tiet lich am duong mobile

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -704,7 +704,8 @@
   "tim_tep_tren_dien_thoai_cua_ban": "Tìm tệp trên điện thoại của bạn",
   "chon_tai_lieu": "Chọn tài liệu",
   "chi_ho_tro_txt": "Chỉ hỗ trợ tệp txt",
-  "coppy": "Coppy"
+  "coppy": "Coppy",
+  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)"
 }
 
 
