--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -708,5 +708,6 @@
   "tao_that_bai": "Tạo sự kiện thất bại",
   "thong_tin_su_kien": "Thông tin sự kiện",
   "doc_ngay": "Đọc ngay",
-  "tai_van_ban_len": "Tải văn bản lên"
+  "tai_van_ban_len": "Tải văn bản lên",
+  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)"
 }
