--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -721,5 +721,6 @@
   "gan_cho_toi": "Gán cho tôi",
   "da_bi_xoa": "Đã bị xóa",
   "nhom_cong_viec_moi": "Nhóm công việc mới",
-  "tai_van_ban_len": "Tải văn bản lên"
+  "tai_van_ban_len": "Tải văn bản lên",
+  "ghi_tru": "Ghi trú"
 }
