--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -717,7 +717,8 @@
   "cong_viec_quan_trong": "Công việc quan trọng",
   "gan_cho_toi": "Gán cho tôi",
   "da_bi_xoa": "Đã bị xóa",
-  "nhom_cong_viec_moi": "Nhóm công việc mới"
+  "nhom_cong_viec_moi": "Nhóm công việc mới",
+  "ghi_tru": "Ghi trú"
 }
 
 
