lich am duong tablet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -709,5 +709,6 @@
   "thong_tin_su_kien": "Thông tin sự kiện",
   "doc_ngay": "Đọc ngay",
   "tai_van_ban_len": "Tải văn bản lên",
-  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)"
+  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)",
+  "tiet_khi": "Tiết khí"
 }
