--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -705,7 +705,8 @@
   "chon_tai_lieu": "Chọn tài liệu",
   "chi_ho_tro_txt": "Chỉ hỗ trợ tệp txt",
   "coppy": "Coppy",
-  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)"
+  "gio_hac_dao_gio_xau": "Giờ Hắc Đạo (Giờ Xấu)",
+  "tiet_khi": "Tiết khí"
 }
 
 
