--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -708,5 +708,11 @@
   "tao_that_bai": "Tạo sự kiện thất bại",
   "thong_tin_su_kien": "Thông tin sự kiện",
   "doc_ngay": "Đọc ngay",
-  "tai_van_ban_len": "Tải văn bản lên"
+  "tai_van_ban_len": "Tải văn bản lên",
+  "nhan_vien": "Nhân viên",
+  "them_danh_ba_ca_nhan": "Thêm danh bạ cá nhân",
+  "ho_ten_cb": "Họ tên cán bộ",
+  "so_cmt": "Số CMTND",
+  "sdt_nha_rieng": "Số điện thoại nhà riêng",
+  "luu_danh_ba": "Lưu danh bạ"
 }
