--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -731,7 +731,12 @@
   "gan_cho_toi": "Gán cho tôi",
   "da_bi_xoa": "Đã bị xóa",
   "nhom_cong_viec_moi": "Nhóm công việc mới",
-  "ghi_tru": "Ghi trú"
+  "ghi_tru": "Ghi trú",
+  "nam": "Năm",
+  "tong_quan_ngay_am_lich": "Tổng quan ngày âm lịch",
+  "am_lich": "Âm lịch",
+  "duong_lich": "Dương lịch",
+  "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY"
 }
 
 
