show dialog choose lich am duong

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -742,7 +742,8 @@
   "tong_quan_ngay_am_lich": "Tổng quan ngày âm lịch",
   "am_lich": "Âm lịch",
   "duong_lich": "Dương lịch",
-  "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY"
+  "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY",
+  "hom_nay": "Hôm nay"
 }
 
 
