--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -746,5 +746,6 @@
   "tong_quan_ngay_am_lich": "Tổng quan ngày âm lịch",
   "am_lich": "Âm lịch",
   "duong_lich": "Dương lịch",
-  "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY"
+  "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY",
+  "hom_nay": "Hôm nay"
 }
