--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -737,7 +737,8 @@
   "gan_cho_toi": "Gán cho tôi",
   "da_bi_xoa": "Đã bị xóa",
   "nhom_cong_viec_moi": "Nhóm công việc mới",
-  "ghi_tru": "Ghi trú"
+  "ghi_tru": "Ghi trú",
+  "sua_danh_ba_ca_nhan": "Sửa thông tin danh bạ cá nhân"
 }
 
 
