--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -410,7 +410,7 @@
   "ngay_phan_anh": "Ngày phản ánh",
   "lien_quan_quy_dinh": "Liên quan đến quy định tại Luật",
   "tai_lieu_dinh_kem_cong_dan": "Tài liệu đính kèm của công dân/ DN",
-  "ngay_vb": "Ngày VB",
+  "ngay_vb": "Ngày văn bản",
   "trich_yeu": "Trích yếu",
   "file_dinh_kem": "File đính kèm",
   "van_ban_lien_quan": "Văn bản liên quan",
@@ -455,7 +455,7 @@
   "don_vi_tra_lai": "Đơn vị trả lại",
   "noi_dung_tra_lai": "Nội dung trả lại",
   "nguoi_bi_tra_lai": "Người bị trả lại",
-  "don_vi_bi_tra_lai": "đon vị bị trả lại",
+  "don_vi_bi_tra_lai": "Đơn vị bị trả lại",
   "lich_su_tra_lai": "Lịch sử trả lại",
   "lich_su_thu_hoi": "Lịch sử thu hồi",
   "nguoi_thu_hoi": "Người thu hồi",
