api search tin tuc

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -745,7 +745,10 @@
   "am_lich": "Âm lịch",
   "duong_lich": "Dương lịch",
   "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY",
-  "hom_nay": "Hôm nay"
+  "hom_nay": "Hôm nay",
+  "hom_qua": "Hôm qua",
+  "bay_ngay_truoc": "7 ngày trước",
+  "bamoi_ngay_truoc": "30 ngày trước"
 }
 
 
