--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -745,7 +745,10 @@
   "am_lich": "Âm lịch",
   "duong_lich": "Dương lịch",
   "am_lich_hom_nay_ngay": "ÂM LỊCH HÔM NAY NGÀY",
-  "hom_nay": "Hôm nay"
+  "hom_nay": "Hôm nay",
+  "content_xoa_danh_ba": "Bạn có chắc chắn muốn xóa danh bạ.",
+  "xoa_danh_ba": "Xóa danh bạ",
+  "them_anh": "Thêm ảnh"
 }
 
 
