--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -764,6 +764,14 @@
   "lich_su_huy_duyet": "Lịch sử hủy duyệt",
   "theo_doi_van_ban_da_ban_hanh": "Theo dõi văn bản đã ban hành",
   "van_ban_di_ban_hanh": "Văn bản đi ban hành",
-  "van_ban_di_noi_bo": "Văn bản đi nội bộ"
+  "van_ban_di_noi_bo": "Văn bản đi nội bộ",
+  "ban_hanh": "Ban hành",
+  "soan_thao": "Soạn thảo",
+  "ky_van_ban": "Ký văn bản",
+  "ky_duyet": "Ký duyệt",
+  "kiem_tra_the_thuc": "Kiểm tra thể thức",
+  "cap_so_ban_hanh": "Cấp số ban hành"
+
+
 
 }
