--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -767,5 +767,6 @@
   "lich_su_huy_duyet": "Lịch sử hủy duyệt",
   "theo_doi_van_ban_da_ban_hanh": "Theo dõi văn bản đã ban hành",
   "van_ban_di_ban_hanh": "Văn bản đi ban hành",
-  "van_ban_di_noi_bo": "Văn bản đi nội bộ"
+  "van_ban_di_noi_bo": "Văn bản đi nội bộ",
+  "UBND_tinh_dong_nai": "UBND tỉnh đồng nai"
 }
