tệp đính kèm chi tiết văn bản ui

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -766,7 +766,8 @@
   "ky_van_ban": "Ký văn bản",
   "ky_duyet": "Ký duyệt",
   "kiem_tra_the_thuc": "Kiểm tra thể thức",
-  "cap_so_ban_hanh": "Cấp số ban hành"
+  "cap_so_ban_hanh": "Cấp số ban hành",
+  "tep_dinh_kem": "Tệp đính kèm"
 }
 
 
