dash board y kien nguoi dan

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -782,7 +782,9 @@
   "dv": "ĐV",
   "UBND_tinh_dong_nai": "UBND tỉnh đồng nai",
   "lich_hop_can_klch": "Lịch họp cần KLCH",
-  "lich_da_klch": "Lịch đã KLCH"
+  "lich_da_klch": "Lịch đã KLCH",
+  "cho_bo_xung_thong_tin": "Chờ bổ sung thông tin"
+
 }
 
 
