fix call api tao lich lam viec

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -222,7 +222,7 @@
   "tuan": "Tuần",
   "thang": "Tháng",
   "lich_cua_toi": "Lịch của tôi",
-  "tao_lich_cong_tac_trong_nuoc": "Tạo lịch công tác trong nước",
+  "tao_lich_cong_tac": "Tạo lịch công tác",
   "lich_cong_tac_trong_nuoc": "Lịch công tác trong nước",
   "lich_lam_viec": "Lịch làm việc",
   "lich_cong_tac_nuoc_ngoai": "Lịch công tác nước ngoài",
