--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -804,5 +804,7 @@
   "huy_trinh_ky" : "Hủy trình ký",
   "trinh_ky_tiep_theo" : "Trình ký tiếp theo",
   "khoi_tao_van_ban" : "Khởi tạo văn bản",
-  "cap_nhat_van_ban" : "Cập nhật văn bản"
+  "cap_nhat_van_ban" : "Cập nhật văn bản",
+  "tim_kiem_theo_trich_yeu" : "Tìm kiếm theo trích yếu",
+  "ngay_bh" : "Ngày BH"
 }
