--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -804,5 +804,8 @@
   "huy_trinh_ky" : "Hủy trình ký",
   "trinh_ky_tiep_theo" : "Trình ký tiếp theo",
   "khoi_tao_van_ban" : "Khởi tạo văn bản",
-  "cap_nhat_van_ban" : "Cập nhật văn bản"
+  "cap_nhat_van_ban" : "Cập nhật văn bản",
+  "lich_hop_duyet_phong" : "Lịch họp duyệt phòng",
+  "lich_hop_duyet_ky_thuat" : "Lịch họp duyệt kỹ thuật",
+  "lich_hop_duyet_yeu_cau_chuan_bi" : "Lịch họp duyệt yêu cầu chuẩn bị"
 }
