--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -802,7 +802,11 @@
   "lich_hop_tao_ho" : "Lịch họp tạo hộ",
   "lich_hop_thu_hoi" : "Lịch họp thu hồi",
   "tim_kiem_theo_trich_yeu" : "Tìm kiếm theo trích yếu",
-  "ngay_bh" : "Ngày BH"
+  "ngay_bh" : "Ngày BH",
+  "tu_choi_tham_du" : "Từ chối tham dự",
+  "vang_mat" : "Vắng mặt",
+  "da_diem_danh" : "Đã điểm danh",
+  "chua_diem_danh" : "Chưa điểm danh"
 }
 
 
