fix bug load data chu de ,load more theo doi bai viet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -647,6 +647,7 @@
   "mttq_cac_the": "MTTQ và các đoàn thể",
   "nhap_linK_bao_cao": "Nhập link bài báo hoặc bài post Facebook để theo dõi",
   "nhap_link": "Nhập link ...",
+  "nhap_link_": "Nhập link",
   "sua_lich_hop": "Sửa lịch họp",
   "conten_diem_danh": "Bạn có chắc chắn muốn điểm danh cho những người được chọn?",
   "conten_huy_diem_danh": "Bạn có chắc chắn muốn hủy điểm danh cho những người được chọn?",
