--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -778,7 +778,7 @@
   "du_thao": "Dự thảo",
   "van_ban_ban_hanh_kem_theo_du_an": "Văn bản ban hành kèm theo dự thảo",
   "van_ban_lien_thong_khong_ban_hanh_cung": "Văn bản liên thông (không ban hành cùng)",
-  "khong_co_tep_nao" : "Không có tệp nào",
+  "khong_co_tep_nao": "Không có tệp nào",
   "nd_ky_duyet": "ND ký duyệt",
   "trinh_ky": "Trình ký",
   "lich_su_ky_duyet": "Lịch sử ký duyệt",
@@ -790,23 +790,24 @@
   "lich_hop_can_klch": "Lịch họp cần KLCH",
   "cho_bo_xung_thong_tin": "Chờ bổ sung thông tin",
   "lich_da_klch": "Lịch đã KLCH",
-  "thoi_gian_phat_bieu" : "Thời gian phát biểu",
-  "tra_lai" : "Trả lại",
-  "cap_so" : "Cấp sổ",
-  "thu_hoi_van_ban_di_da_ban_hanh" : "Thu hồi văn bản đi đã ban hành",
-  "huy_trinh_ky" : "Hủy trình ký",
-  "trinh_ky_tiep_theo" : "Trình ký tiếp theo",
-  "khoi_tao_van_ban" : "Khởi tạo văn bản",
-  "cap_nhat_van_ban" : "Cập nhật văn bản",
-  "lich_hop_huy" : "Lịch họp huỷ",
-  "lich_hop_tao_ho" : "Lịch họp tạo hộ",
-  "lich_hop_thu_hoi" : "Lịch họp thu hồi",
-  "tim_kiem_theo_trich_yeu" : "Tìm kiếm theo trích yếu",
-  "ngay_bh" : "Ngày BH",
-  "tu_choi_tham_du" : "Từ chối tham dự",
-  "vang_mat" : "Vắng mặt",
-  "da_diem_danh" : "Đã điểm danh",
-  "chua_diem_danh" : "Chưa điểm danh"
+  "thoi_gian_phat_bieu": "Thời gian phát biểu",
+  "tra_lai": "Trả lại",
+  "cap_so": "Cấp sổ",
+  "thu_hoi_van_ban_di_da_ban_hanh": "Thu hồi văn bản đi đã ban hành",
+  "huy_trinh_ky": "Hủy trình ký",
+  "trinh_ky_tiep_theo": "Trình ký tiếp theo",
+  "khoi_tao_van_ban": "Khởi tạo văn bản",
+  "cap_nhat_van_ban": "Cập nhật văn bản",
+  "lich_hop_huy": "Lịch họp huỷ",
+  "lich_hop_tao_ho": "Lịch họp tạo hộ",
+  "lich_hop_thu_hoi": "Lịch họp thu hồi",
+  "tim_kiem_theo_trich_yeu": "Tìm kiếm theo trích yếu",
+  "ngay_bh": "Ngày BH",
+  "tu_choi_tham_du": "Từ chối tham dự",
+  "vang_mat": "Vắng mặt",
+  "da_diem_danh": "Đã điểm danh",
+  "chua_diem_danh": "Chưa điểm danh",
+  "ket_nois": "ket-noi"
 }
 
 
