--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -814,5 +814,6 @@
   "ket_nois": "ket-noi",
   "lich_hop_duyet_phong" : "Lịch họp duyệt phòng",
   "lich_hop_duyet_ky_thuat" : "Lịch họp duyệt kỹ thuật",
-  "lich_hop_duyet_yeu_cau_chuan_bi" : "Lịch họp duyệt yêu cầu chuẩn bị"
+  "lich_hop_duyet_yeu_cau_chuan_bi" : "Lịch họp duyệt yêu cầu chuẩn bị",
+  "tin_quoc_te" : "Tin quốc tế"
 }
