--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -813,7 +813,17 @@
   "lich_hop_duyet_ky_thuat": "Lịch họp duyệt kỹ thuật",
   "lich_hop_duyet_yeu_cau_chuan_bi": "Lịch họp duyệt yêu cầu chuẩn bị",
   "id_zoom": "ID Zoom",
-  "ghi_chu": "Ghi chú"
+  "ghi_chu": "Ghi chú",
+  "cho_tiep_nha_xu_ly": "Chờ tiếp nhận xử lý",
+  "cho_bo_sung_thong_tin": "Chờ tiếp nhận xử lý",
+  "cho_phan_cong_xu_ly": "Chờ phân công xử lý",
+  "cho_cho_y_kien": "Chờ cho ý kiến",
+  "tong_hop_yknd_da_nhan": "Tổng số YKND đã nhận",
+  "cho_tiep_nhan_xu_ly": "Chờ tiếp nhận xử lý",
+  "so_y_kien_tiep_nha": "Số ý kiến tiếp nhận",
+  "dang_tai_cong_khai": "Đăng tải công khai",
+  "so_luong_y_kien": "Số lượng ý kiến"
+
 }
 
 
