--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -759,13 +759,13 @@
   "them_anh": "Thêm ảnh",
   "loai_van_ban_di": "Loại văn bản đi",
   "ma_pakn": "Mã PAKN",
-  "dv_soan_thao": "ĐV soạn thảo",
+  "dv_soan_thao": "Đơn vị soạn thảo",
   "nguoi_soan_thao": "Người soạn thảo",
   "ky_hieu": "Ký hiệu",
-  "ngay_han_xl": "Ngày hạn XL",
+  "ngay_han_xl": "Ngày hạn xử lý",
   "nguoi_theo_doi_van_ban": "Người theo dõi văn bản",
-  "dv_trong_he_thong": "ĐV trong hệ thống",
-  "dv_ngoai_he_thong": "ĐV ngoài hệ thống",
+  "dv_trong_he_thong": "Đơn vị trong hệ thống",
+  "dv_ngoai_he_thong": "Đơn vị ngoài hệ thống",
   "thong_tin_ky_duyet": "Thông tin ký duyệt",
   "lich_su_huy_duyet": "Lịch sử hủy duyệt",
   "theo_doi_van_ban_da_ban_hanh": "Theo dõi văn bản đã ban hành",
