--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -7,7 +7,9 @@
   "error_network": "No internet!",
   "retry": "Retry",
   "unauthorized": "Your session has expired. Please sign in.",
-  "search": "Search..."
+  "search": "Search...",
+  "search_for_contacts" : "Tìm kiếm...",
+  "messages"  : "Messages"
 }
 
 
