--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -19,7 +19,7 @@
   "login": "Đăng nhập",
   "dang_nhap_that_bai": "Đăng nhập thất bại hãy thử lại",
   "quen_mat_khau": "Quên mật khẩu",
-  "dang_ky" : "Đăng ký",
-  "khong_co_du_lieu" : "Không có dữ liệu"
+  "dang_ky": "Đăng ký",
+  "khong_co_du_lieu": "Không có dữ liệu",
+  "tai_khoan_hoac_mat_khau_khong_chinh_xac": "Thông tin tài khoản hoặc mật khẩu của bạn không chính xác, vui lòng kiểm tra lại"
 }
-
