--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,5 +21,6 @@
   "quen_mat_khau": "Quên mật khẩu",
   "dang_ky": "Đăng ký",
   "khong_co_du_lieu": "Không có dữ liệu",
-  "tai_khoan_hoac_mat_khau_khong_chinh_xac": "Thông tin tài khoản hoặc mật khẩu của bạn không chính xác, vui lòng kiểm tra lại"
+  "tai_khoan_hoac_mat_khau_khong_chinh_xac": "Thông tin tài khoản hoặc mật khẩu của bạn không chính xác, vui lòng kiểm tra lại",
+  "email_da_duoc_su_dung" : "Địa chỉ email đã được một tài khoản khác sử dụng."
 }
