--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -45,5 +45,6 @@
   "mat_khau_moi" : "Mật khẩu mới",
   "xac_nhan_mat_khau_moi" : "Xác nhận mật khẩu mới",
   "mat_khau_hien_tai_chua_chinh_xac" : "Mật khẩu hiện tại chưa chính xác",
-  "doi_mat_khau_thanh_cong" : "Đổi mật khẩu thành công"
+  "doi_mat_khau_thanh_cong" : "Đổi mật khẩu thành công",
+  "dang_ky_that_bai" : "Đăng ký thất bại"
 }
