--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -46,7 +46,9 @@
   "xac_nhan_mat_khau_moi": "Xác nhận mật khẩu mới",
   "mat_khau_hien_tai_chua_chinh_xac" : "Mật khẩu hiện tại chưa chính xác",
   "doi_mat_khau_thanh_cong" : "Đổi mật khẩu thành công",
-  "dang_ky_that_bai" : "Đăng ký thất bại"
+  "dang_ky_that_bai" : "Đăng ký thất bại",
+  "thong_bao" : "Thông báo"
+
 }
 
 
